add more tests for OlliL/moneyjinn-client#59